# mass_mailing_service

./: .env.sample  README.md  groups.json  manage.py  pyproject.toml  scheduler.py
blog/: models.py  views.py
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  index.html  log_detail.html  log_list.html
message/: admin.py  forms.py  models.py  views.py
message/migrations/: 0001_initial.py
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: check_email.html  login.html  register.html  user_form.html
