[tool.poetry]
name = "mass-mailing-service"
version = "0.1.0"
description = ""
authors = ["ElizavetaAveryanova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
appconfig = "^0.1"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
